# node-iesor

./: .gitignore  README.md  package.json
Box2D/: CMakeLists.txt  box2D.gyp
IESoR/: CMakeLists.txt  iesor.gyp  iesor.h
IESoR/Construction/Bodies/: outputsToBodies.cpp  outputsToBodies.h
IESoR/Construction/GPU/: gpuBodyBuilder.cpp  gpuBodyBuilder.h
IESoR/Network/: iesorBody.cpp  iesorBody.h  network.cpp  network.h
IESoR/Simulation/: iesorDirector.cpp  iesorDirector.h  iesorWorld.cpp  iesorWorld.h
IESoR/Simulation/Initialize/: initializeWorld.cpp  initializeWorld.h
IESoR/Simulation/Record/: recordWorld.cpp  recordWorld.h
JSON/: CMakeLists.txt  json.gyp  json.h
JSON/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
node-iesor/: .gitignore  binding.gyp  iesor-world.cpp
node-iesor/src/: worldWrapper.cpp  worldWrapper.h
node-iesor/test/: gpu.js  gpuTest.js  iesorExample.js  jsBody112.json  jsGenome112.json  jsGenome142856.json  package.json
